--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,8 @@
 bot:
   automerge: true
 build_platform:
+  linux_aarch64: linux_64
+  linux_ppc64le: linux_64
   osx_arm64: osx_64
 conda_build_tool: rattler-build
 github:
@@ -9,6 +11,7 @@ github:
 conda_build:
   error_overlinking: true
 conda_forge_output_validation: true
+conda_install_tool: pixi
 provider:
   linux_aarch64: azure
   linux_ppc64le: azure
